Guy: updated related work, introduction, bib file.

--- a/Tex/src/myRef.bib
+++ b/Tex/src/myRef.bib
@@ -15,7 +15,7 @@
  acmid = {322176},
  publisher = {ACM},
  address = {New York, NY, USA},
-} 
+}
 
 @incollection{BayerS1988,
  author = { Rudolf Bayer and Mario Schkolnick},
@@ -39,12 +39,6 @@
                Triangle Park, North Carolina, USA, 30 October - 1 November 1989},
   year      = {1989},
   pages     = {540--545},
-  crossref  = {DBLP:conf/focs/FOCS30},
-  url       = {http://doi.ieeecomputersociety.org/10.1109/SFCS.1989.63531},
-  doi       = {10.1109/SFCS.1989.63531},
-  timestamp = {Wed, 03 Sep 2014 11:25:58 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/focs/AragonS89},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @article{HerlihyW1990,
@@ -103,17 +97,9 @@
                Hassan Chafi and
                Kunle Olukotun},
   title     = {A practical concurrent binary search tree.},
-  booktitle = {Proceedings of the 15th {ACM} {SIGPLAN} Symposium on Principles and
-               Practice of Parallel Programming, {PPOPP} 2010, Bangalore, India,
-               January 9-14, 2010},
+  booktitle = {PPOPP},
   year      = {2010},
   pages     = {257--268},
-  crossref  = {DBLP:conf/ppopp/2010},
-  url       = {http://doi.acm.org/10.1145/1693453.1693488},
-  doi       = {10.1145/1693453.1693488},
-  timestamp = {Wed, 03 Sep 2014 09:37:52 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/ppopp/BronsonCCO10},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @inproceedings{EllenFRB2010,
@@ -144,28 +130,17 @@
 @inproceedings{AfekKKMT2012,
  author = {Yehuda Afek and Haim Kaplan and Boris Korenfeld and Adam Morrison and Robert E. Tarjan},
  title = {{CBTree}: A Practical Concurrent Self-adjusting Search Tree},
- booktitle = {26th International Conference on Distributed 	Computing (DISC)},
+ booktitle = {DISC},
  year = {2012},
- isbn = {978-3-642-33650-8},
- location = {Salvador, Brazil},
  pages = {1--15},
- numpages = {15},
- acmid = {2427875},
 }
 
 @inproceedings{BraginskyP2012,
  author = {Anastasia Braginsky and Erez Petrank},
  title = {A Lock-free {B}+Tree},
- booktitle = {24th ACM Symposium on Parallelism in Algorithms and Architectures (SPAA)},
+ booktitle = {SPAA},
  year = {2012},
- isbn = {978-1-4503-1213-4},
- location = {Pittsburgh, Pennsylvania, USA},
  pages = {58--67},
- numpages = {10},
- url = {http://doi.acm.org/10.1145/2312005.2312016},
- doi = {10.1145/2312005.2312016},
- acmid = {2312016},
- keywords = {B+tree, concurrent data structures, lock-freedom, parallel programming, progress guarantee},
 }
 
 @inproceedings{CrainGR2013,
@@ -202,40 +177,225 @@
                Martin T. Vechev and
                Eran Yahav},
   title     = {Practical concurrent binary search trees via logical ordering.},
-  booktitle = {{ACM} {SIGPLAN} Symposium on Principles and Practice of Parallel Programming,
-               PPoPP '14, Orlando, FL, USA, February 15-19, 2014},
+  booktitle = {PPoPP},
   year      = {2014},
   pages     = {343--356},
-  url       = {http://doi.acm.org/10.1145/2555243.2555269},
-  doi       = {10.1145/2555243.2555269},
-  timestamp = {Wed, 03 Sep 2014 09:36:52 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/ppopp/DrachslerVY14},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @inproceedings{ArbelA2014,
   author    = {Maya Arbel and
                Hagit Attiya},
   title     = {Concurrent updates with {RCU:} search tree as an example},
-  booktitle = {{ACM} Symposium on Principles of Distributed Computing, {PODC} '14,
-               Paris, France, July 15-18, 2014},
+  booktitle = {PODC},
   year      = {2014},
   pages     = {196--205},
-  url       = {http://doi.acm.org/10.1145/2611462.2611471},
-  doi       = {10.1145/2611462.2611471},
-  timestamp = {Sun, 07 Sep 2014 09:46:38 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/podc/ArbelA14},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @InProceedings{LevAriCK2014,
   author = 	 {Kfir Lev-Ari and
-			  Gregory Chockler and 
+			  Gregory Chockler and
 			  Idit Keidar},
-  title = 	 {On Correctness of Data Structures under Reads-Write Concurrency},  
+  title = 	 {On Correctness of Data Structures under Reads-Write Concurrency},
   booktitle = {DISC},
   year = 	 {2014},
   month = 	 {October},
 }
 
+@inproceedings{Michael:1996,
+ author = {Michael, Maged M. and Scott, Michael L.},
+ title = {Simple, Fast, and Practical Non-blocking and Blocking Concurrent Queue Algorithms},
+ booktitle = {PODC},
+ year = {1996},
+}
 
+@INPROCEEDINGS{Ohad:OOPSLA11,
+  AUTHOR =       {Ohad Shacham and Nathan Bronson and Alex Aiken and Mooly Sagiv and Martin Vechev and Eran Yahav},
+  TITLE =        {Testing Atomicity of Composed Concurrent Operations},
+  BOOKTITLE =    {OOPSLA},
+  YEAR =         {2011},
+}
+
+@inproceedings{Doh:SPAA04,
+ author = {Doherty, Simon and Detlefs, David L. and Groves, Lindsay and Flood, Christine H. and Luchangco, Victor and Martin, Paul A. and Moir, Mark and Shavit, Nir and Steele,Jr., Guy L.},
+ title = {DCAS is not a silver bullet for nonblocking algorithm design},
+ booktitle = {SPAA},
+ year = {2004},
+ }
+
+@inproceedings{Jin:2012,
+ author = {Jin, Guoliang and Zhang, Wei and Deng, Dongdong and Liblit, Ben and Lu, Shan},
+ title = {Automated concurrency-bug fixing},
+ booktitle = {OSDI},
+ year = {2012}
+}
+
+@book{Weikum:2001,
+ author = {Weikum, Gerhard and Vossen, Gottfried},
+ title = {Transactional information systems: theory, algorithms, and the practice of concurrency control and recovery},
+ year = {2001},
+ isbn = {1-55860-508-8},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+}
+
+@book{BHG:Book87,
+  author    = {Philip A. Bernstein and
+               Vassos Hadzilacos and
+               Nathan Goodman},
+  title     = {Concurrency Control and Recovery in Database Systems},
+  publisher = {Addison-Wesley},
+  year      = {1987},
+  isbn      = {0-201-10715-5},
+}
+
+@article{Eswaran:1976,
+ author = {Eswaran, K. P. and Gray, J. N. and Lorie, R. A. and Traiger, I. L.},
+ title = {The notions of consistency and predicate locks in a database system},
+ journal = {Commun. ACM},
+ volume = {19},
+ issue = {11},
+ month = {November},
+ year = {1976},
+ pages = {624--633},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@inproceedings{CH:PODS95,
+ author = {Chaudhri, Vinay K. and Hadzilacos, Vassos},
+ title = {Safe locking policies for dynamic databases},
+ booktitle = {PODS '95: Proceedings of the fourteenth ACM SIGACT-SIGMOD-SIGART symposium on Principles of database systems},
+ year = {1995},
+ isbn = {0-89791-730-8},
+ pages = {233--244},
+ location = {San Jose, California, United States},
+ doi = {http://doi.acm.org/10.1145/212433.212464},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+
+@inproceedings{MZGB:POPL06,
+ author = {McCloskey, Bill and Zhou, Feng and Gay, David and Brewer, Eric},
+ title = {Autolocker: synchronization inference for atomic sections},
+ booktitle = {POPL},
+ year = {2006},
+ pages = {346--358},
+ }
+
+@inproceedings{CCG:PLDI08,
+ author = {Sigmund Cherem and Trishul Chilimbi and Sumit Gulwani},
+ title = {Inferring locks for atomic sections},
+ booktitle = {PLDI},
+ year = {2008},
+}
+
+
+ @inproceedings{Emmi06POPL,
+  author    = {Michael Emmi and
+               Jeffrey S. Fischer and
+               Ranjit Jhala and
+               Rupak Majumdar},
+  title     = {Lock allocation},
+  booktitle = {POPL},
+  year      = {2007},
+  pages     = {291-296},
+  ee        = {http://doi.acm.org/10.1145/1190216.1190260},
+  crossref  = {DBLP:conf/popl/2007},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+ @inproceedings{HFP:TRANSACT06,
+    author = {Hicks, Michael and Foster, Jeffrey S. and Prattikakis, Polyvios},
+    title = {Lock Inference for Atomic Sections},
+    booktitle = {Proceedings of the First ACM SIGPLAN Workshop on Languages, Compilers, and Hardware Support for Transactional Computing},
+    citeulike-article-id = {2305074},
+    keywords = {atomicity, concurrency},
+    month = {June},
+    pdf = {http://www.cs.umd.edu/\~{}polyvios/publications/transact06.pdf},
+    year = {2006}
+}
+
+@incollection {CGE:CC08,
+   author = {Cunningham, Dave and Gudka, Khilan and Eisenbach, Susan},
+   title = {Keep Off the Grass: Locking the Right Path for Atomicity},
+   booktitle = {CC},
+   year = {2008},
+   pages = {276-290},
+}
+
+@incollection{gudka2012lock,
+  title={Lock inference in the presence of large libraries},
+  author={Gudka, Khilan and Harris, Tim and Eisenbach, Susan},
+  booktitle={ECOOP},
+  year={2012},
+}
+
+@article{HLR:SLCA2010,
+author = { Harris ,  Tim  and  Larus ,  James  and  Rajwar ,  Ravi },
+title = {Transactional Memory, 2nd edition},
+journal = {Synthesis Lectures on Computer Architecture},
+volume = {5},
+number = {1},
+year = {2010},
+}
+
+@article{DuffyTM2010,
+    author = {Joe Duffy},
+    title = {A (brief) retrospective on transactional memory},
+    year = {2010},
+    note = {\url{http://joeduffyblog.com/2010/01/03/\\a-brief-retrospective-on-transactional-memory/}}
+}
+
+@article{Cascaval:2008,
+ author = {Cascaval, Calin and Blundell, Colin and Michael, Maged and Cain, Harold W. and Wu, Peng and Chiras, Stefanie and Chatterjee, Siddhartha},
+ title = {Software Transactional Memory: Why Is It Only a Research Toy?},
+ journal = {Queue},
+ issue_date = {September 2008},
+ volume = {6},
+ number = {5},
+ month = sep,
+ year = {2008},
+ issn = {1542-7730},
+ pages = {46--58},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/1454456.1454466},
+ doi = {10.1145/1454456.1454466},
+ acmid = {1454466},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{mckenneyParallel,
+  title={Is Parallel Programming Hard, And, If So, What Can You Do About It?},
+  author={McKenney, Paul E},
+  journal={Linux Technology Center, IBM Beaverton},
+  month = aug,
+  year={2012}
+}
+
+@inproceedings{Nakaike:2010,
+ author = {Nakaike, Takuya and Michael, Maged M.},
+ title = {Lock Elision for Read-only Critical Sections in Java},
+ booktitle = {PLDI},
+ year = {2010},
+ pages = {269--278},
+}
+
+@article{Sleator:SAH1986:SAH,
+ author = {Sleator, Daniel Dominic and Tarjan, Robert Endre},
+ title = {Self adjusting heaps},
+ journal = {SIAM J. Comput.},
+ volume = {15},
+ issue = {1},
+ month = {February},
+ year = {1986},
+ issn = {0097-5397},
+ pages = {52--69},
+ numpages = {18},
+ url = {http://portal.acm.org/citation.cfm?id=13535.13539},
+ doi = {10.1137/0215004},
+ acmid = {13539},
+ publisher = {Society for Industrial and Applied Mathematics},
+ address = {Philadelphia, PA, USA},
+}
