--- a/Tex/src/introduction.tex
+++ b/Tex/src/introduction.tex
@@ -1,3 +1,5 @@
+\section{Introduction} \label{sec:intro}
+
 The steady increase in the number of  cores in today's computers is driving software developers to allow more parallelism.
 Indeed, many recent works have developed scalable concurrent data
 structures~\cite{ArbelA2014,DrachslerVY2014,NatarajanM2014,BrownER2014,CrainGR2013,BraginskyP2012,
