--- a/Tex/src/evaluation.tex
+++ b/Tex/src/evaluation.tex
@@ -8,6 +8,29 @@ transformation to two tree based data structures,
 a simple unbalanced binary search tree 
 and a treap (randomized binary search tree) \cite{AragonS1989}.
 
+
+\subsection{Implementation Details}
+\maya{new subsection}
+We implemented our automatic transformation in Java$^{TM}$, 
+the following section highlight some technical details of 
+the implementation.
+Version numbers are easily added either at the shared object level
+or at the lock level. Similarly, the locked set and the read set 
+can be implemented using several Java provided data structures. 
+Timeouts were implemented using a counter, incremented and checked
+inside loops (backwards branches) and calls to functions.
+
+Retries can be implemented using the exception mechanism,
+that is already required to due to loss of internal consistency. 
+Operations are delimited with catch blocks, if the exception caught
+is of type defined by the automatic transformation then a retry is required. 
+If the exception if of another type, a read set validation takes place, 
+if the read set validation passes it means that the exception  is inherent
+to the original program and is thrown to higher levels, otherwise, the
+exception might occurred due to unvalidated reads and the operation is
+restarted. 
+
+
 \paragraph{Setup}
 We compared the performance of our automatic implementations, 
 the automatic binary search tree (\autoTree) and the automatic
