Idit: updated proof

--- a/Tex/src/proof2.tex
+++ b/Tex/src/proof2.tex
@@ -31,9 +31,9 @@ Denote by $e_1, e_2, \ldots, e_i, \ldots$ the sequence of the first steps of the
 read set validation in the execution of successful validation phases, by their
 order in $\pi$, where $e_i$ is a step of the operation $op_{e_i}$ executed by process $p_{e_i}$.
 
-Two executions are \emph{equivalent} if every process in their associated
-histories invokes the same operations in the same order and gets the
-same results for each operation. \eshcar{can move this def to the model section}
+%Two executions are \emph{equivalent} if every process in their associated
+%histories invokes the same operations in the same order and gets the
+%same results for each operation. \eshcar{can move this def to the model section}
 
 Two executions are \emph{indistinguishable} to a set of operations if each
 operation in the set executes the same steps on primitive shared objects, and
