Guy: updated related work and bib file

--- a/Tex/src/myRef.bib
+++ b/Tex/src/myRef.bib
@@ -399,3 +399,39 @@ year = {2010},
  publisher = {Society for Industrial and Applied Mathematics},
  address = {Philadelphia, PA, USA},
 }
+
+
+@article{Rajwar:2002:TLE:635508.605399,
+ author = {Rajwar, Ravi and Goodman, James R.},
+ title = {Transactional Lock-free Execution of Lock-based Programs},
+ journal = {SIGOPS Oper. Syst. Rev.},
+ issue_date = {December 2002},
+ volume = {36},
+ number = {5},
+ month = oct,
+ year = {2002},
+ issn = {0163-5980},
+ pages = {5--17},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/635508.605399},
+ doi = {10.1145/635508.605399},
+ acmid = {605399},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+
+@inproceedings{Roy:2009:RSS:1519065.1519094,
+ author = {Roy, Amitabha and Hand, Steven and Harris, Tim},
+ title = {A Runtime System for Software Lock Elision},
+ booktitle = {EuroSys},
+ year = {2009},
+}
+
+@inproceedings{Afek:2014:SHL:2611462.2611482,
+ author = {Afek, Yehuda and Levy, Amir and Morrison, Adam},
+ title = {Software-improved Hardware Lock Elision},
+ booktitle = {PODC},
+ year = {2014},
+}
+
